<resources>
    <string name="error_default">Hệ thống đang có lỗi xảy ra!\nVui lòng thử lại sau!</string>
    <string name="tin_nhan">Tin nhắn</string>
    <string name="danh_ba">Danh bạ</string>
    <string name="khong_co_mang">Không có kết nối mạng!\nVui lòng kiểm tra và thử lại!</string>
    <string name="ban_khong_co_tin_nhan_nao">Bạn không có tin nhắn nào!</string>
    <string name="khong_co_du_lieu">Không có dữ liệu!</string>
    <string name="dang_cap_nhat">Đang cập nhật</string>
    <string name="dang_gui">Đang gửi...</string>
    <string name="vua_xong">Vừa xong</string>
    <string name="loi_gui_tin_nhan">Lỗi gửi tin nhắn</string>
    <string name="ten_dang_cap_nhat">Tên đang cập nhật</string>
    <string name="gia_dang_cap_nhat">Giá đang cập nhật</string>
    <string name="viet_loi_nhan">Viết lời nhắn</string>
    <string name="ghe_tham">Ghé thăm</string>
    <string name="xem_san_pham">Xem sản phẩm</string>
    <string name="xem_san_pham_ap_dung">Xem sản phẩm áp dụng</string>
    <string name="sao_chep">Sao chép</string>
    <string name="thong_bao_tin_nhan_moi">Thông báo tin nhắn mới</string>
    <string name="chan_tin_nhan_tu_nguoi_nay">Chặn tin nhắn từ người này</string>
    <string name="chan_tin_nhan_tu_trang">Chặn tin nhắn từ trang này</string>
    <string name="xoa_cuoc_tro_chuyen">Xóa cuộc trò chuyện</string>
    <string name="thu_vien_anh">Thư viện ảnh</string>
    <string name="cai_dat_tin_nhan">Cài đặt tin nhắn</string>
    <string name="xem_trang_doanh_nghiep">Xem trang doanh nghiệp</string>
    <string name="xem_trang_ca_nhan">Xem trang cá nhân</string>
    <string name="de_sau">Để sau</string>
    <string name="dong_y">Đồng ý</string>
    <string name="chan_tin_nhan">Chặn tin nhắn</string>
    <string name="bo_chan_tin_nhan">Bỏ chặn tin nhắn</string>
    <string name="message_unblock">Sau khi bỏ chặn, bạn sẽ tiếp tục nhắn tin hoặc nhận tin nhắn từ người này.</string>
    <string name="message_block">Bạn sẽ không thể nhắn tin hoặc nhận tin nhắn từ người này nữa</string>
    <string name="message_delete_chat">Bạn chắc chắn muốn xóa cuộc trò chuyện với người này?</string>
    <string name="ban_da_chan_tin_nhan_thanh_cong">Bạn đã chặn tin nhắn thành công</string>
    <string name="ban_da_bo_chan_tin_nhan_thanh_cong">Bạn đã bỏ chặn tin nhắn thành công</string>
    <string name="message_product">Một người vừa chia sẻ sản phẩm</string>
    <string name="message_link">Một người vừa chia sẻ trang web</string>
    <string name="message_sticker">Một người vừa chia sẻ dán nhãn</string>
    <string name="message_media">Một người vừa chia sẻ hình ảnh</string>
    <string name="khong_the_thuc_hien_tac_vu_vi_ban_chua_cap_quyen">Không thể thực hiện tác vụ vì bạn chưa cấp đủ quyền</string>
    <string name="dksd">iCheck muốn truy cập danh bạ của bạn và đồng bộ lên máy chủ phục vụ cho việc gợi ý kết bạn và trò chuyện</string>
    <string name="khong_co_ket_qua_nao_trong_danh_ba">Không có kết quả nào trong danh bạ</string>
    <string name="dong_bo_danh_ba_de_trao_doi">Đồng bộ danh bạ để trao đổi với những người\nbạn đang sử dụng app iCheck nhé!</string>
    <string name="dong_bo_danh_ba">Đồng bộ danh bạ</string>
    <string name="dong_bo_danh_ba_thanh_cong">Đồng bộ danh bạ thành công</string>
    <string name="tim_kiem_ban_be_trong_tin_nhan">Tìm kiếm bạn bè trong tin nhắn</string>
    <string name="tim_kiem_tin_nhan_loi">Xin lỗi chúng tôi không thể tìm được kết quả\nphù hợp với tìm kiếm của bạn</string>
    <string name="copy_success">Copy thành công</string>
    <string name="chon_20_anh">Chỉ được chọn tối đa 20 ảnh</string>
    <string name="chon_20_muc">Chỉ được chọn tối đa 20 mục</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="quay_video">Quay video</string>
    <string name="bo_qua">Bỏ qua</string>
    <string name="xong">Xong</string>
    <string name="chon_anh_video">Chọn ảnh, video</string>
    <string name="s_phut_truoc">%s phút trước</string>
    <string name="ban_chua_dang_nhap_vui_long_dang_nhap">Bạn chưa đăng nhập! Vui lòng đăng nhập!</string>
    <string name="ban_chua_cap_du_quyen">Bạn chưa cấp đủ quyền!</string>
    <string name="count_9">9+</string>
    <string name="ban_da_chan_tin_nhan_cua_s">Bạn đã chặn tin nhắn của %s</string>
    <string name="ban_da_bi_s_chan_tin_nhan">Bạn đã bị %s chặn tin nhắn</string>
    <string name="bo_chan">Bỏ chặn</string>
    <string name="dong_bo">Đồng bộ</string>
    <string name="dieu_khoan_su_dung">Điều khoản sử dụng</string>
    <string name="count_2">+2</string>
    <string name="trinh_phat_video_loi">Trình phát video lỗi</string>
    <string name="cac_ban_se_khong_the_nhan_tin_trong_muc_chat">Các bạn sẽ không thể nhắn tin trong mục Chat</string>
    <string name="cac_ban_se_khong_the_nhan_tin_trong_muc_chat_hay_bo_chan_de_tiep_tuc_cuoc_tro_chuyen_nay">Các bạn sẽ không thể nhắn tin trong mục Chat\n Hãy bỏ chặn để tiếp tục cuộc trò chuyện này.</string>

    //Lỗi
    <string name="co_loi_xay_ra_vui_long_thu_lai">Có lỗi xảy ra. Vui lòng thử lại.</string>
    <string name="token_khong_hop_le_hoac_het_han">Token không hợp lệ hoặc hết hạn</string>
    <string name="invalid_user_id_on_header">Invalid user id on header</string>
    <string name="this_future_is_disable">This feature is disable</string>
    <string name="tai_khoan_da_ton_tai">Tài khoản đã tồn tại</string>
    <string name="ma_otp_khong_chinh_xac">Mã OTP không chính xác</string>
    <string name="vuot_qua_so_lan_nhap_sai_otp">Bạn đã vượt quá số lần nhập otp sai</string>
    <string name="tai_khoan_khong_hop_le">Tài khoản không hợp lệ</string>
    <string name="khong_tim_thay_tai_khoan">Không tìm thấy tài khoản</string>
    <string name="mat_khau_khong_chinh_xac">Mật khẩu không chính xác</string>
    <string name="sdt_sai_dinh_dang">Số điện thoại sai định dạng</string>
    <string name="tai_khoan_hoac_mk_khong_chinh_xac">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="tai_khoan_bi_khoa">Tài khoản bị khóa</string>
    <string name="tai_khoan_bi_khoa_tu_social">Tài khoản bị khóa từ hệ thống Social</string>
    <string name="token_facebook_khong_hop_le">Token Facebook không hợp lệ</string>
    <string name="dang_nhap_lan_dau_bang_fb_vui_long_xac_thuc_sdt">Đăng nhập lần đầu bằng Facebook, vui lòng xác thực số điện thoại</string>
    <string name="mat_khau_khong_dung_dinh_dang">Mật khẩu không đúng định dạng</string>
    <string name="tai_khoan_fb_da_dang_ky_he_thong">Tài khoản facebook đã đăng ký hệ thống</string>
    <string name="register_request_has_existed">register request has existed, please wait</string>
    <string name="da_ton_tai_yeu_cau_quen_mat_khau">Đã tồn tại một yêu cầu quên mật khẩu với tài khoản này</string>
    <string name="tai_khoan_da_duoc_xac_thuc_sdt">Tài khoản đã được xác thực số điện thoại</string>
    <string name="da_ton_tai_yeu_cau_nay">Đã tồn tại yêu cầu này</string>
    <string name="sdt_da_duoc_dang_ky">Số điện thoại đã được đăng ký</string>
    <string name="client_id_existed">client id existed</string>
    <string name="client_id_not_existed">client id not  existed</string>
    <string name="permission_denied">permission denied</string>
    <string name="client_id_and_user_not_matching">clientID and user client id not matching</string>
    <string name="tai_khoan_da_duoc_xac_thuc_email">Tài khoản đã được xác thực email</string>
    <string name="email_nay_da_duoc_xac_thuc_o_tai_khoan_khac">Email này đã được xác thực ở tài khoản khác</string>
    <string name="token_khong_hop_le">Token không hợp lệ</string>
    <string name="email_khong_dung_dinh_dang">Email không đúng định dạng</string>
    <string name="tai_khoan_da_duoc_cai_dat_mat_khau">Tài khoản đã được cài đặt mật khẩu</string>
    <string name="tai_khoan_chua_duoc_dang_ki_su_dung_voi_ung_dung_nay">Tài khoản này chưa được đăng kí sử dụng với ứng dụng này</string>
    <string name="sms_format_not_found">sms format not found</string>
    <string name="phone_number_max_sms">phone number max sms</string>
    <string name="the_minimum_time_between_message_is_not_reached">The minimum time between messages is not reached</string>
    <string name="vuot_qua_so_lan_gui_otp">Bạn đã vượt quá số lần gửi lại OTP cho phép</string>
    <string name="co_loi_khi_gui_otp">Có lỗi khi gửi OTP, vui lòng thử lại sau</string>
    <string name="co_loi_khi_gui_email">Có lỗi khi gửi email, vui lòng thử lại sau</string>
    <string name="application_or_client_secret_invalid">application - clientId or client secret invalid</string>
    <string name="application_permission_denied">application - permission denied</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="quay_video">Quay video</string>
    <string name="bo_qua">Bỏ qua</string>
    <string name="xong">Xong</string>
    <string name="chon_anh_video">Chọn ảnh, video</string>
    <string name="serial_v2_xxx">Serial: %s</string>
</resources>