<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/layoutNoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_contact_chat" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/barlow_semi_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/khong_co_ket_qua_nao_trong_danh_ba"
                    android:textColor="@color/black_21" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/barlow_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/dong_bo_danh_ba_de_trao_doi"
                    android:textColor="@color/black_21" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="38dp"
                    android:background="@drawable/bg_corner_4_light_blue"
                    android:fontFamily="@font/barlow_semi_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/dong_bo_danh_ba"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>